HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/ClassMemberNameConflict/Expected.uv
//! Expected diagnostic metadata for the ClassMemberNameConflict rejected-source specimen.

expectedDiagnostic("E-TYP-2505", "diag.Classes")
